# icu-vitals-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/: config.py  main.py
src/api/routes/: health.py  metrics.py  vitals.py
src/forecasting/: backends.py  ensemble.py  forecaster.py
src/governance/: deterioration.py  severity.py
src/ingestion/: fhir_parser.py  windowing.py
src/mcp_server/: server.py  stdio.py
src/models/: forecast.py  mcp.py  vitals.py
src/observability/: metrics.py
tests/: test_api.py  test_deterioration_index.py  test_forecasting.py  test_mcp_server.py  test_metrics.py  test_vitals_ingestion.py
